# dydra

./: Cargo.toml  LICENSE  Makefile  README.md  riscv_decoder.rs  rust-toolchain
.github/workflows/: build.yaml
rvtests/: Makefile
rvtests/branch_test/: test.S
rvtests/common/: Makefile  test.ld
rvtests/csr_test/: test.S  test.ld
rvtests/load_test/: encoding.h  test.S
rvtests/long_insts/: test.S
rvtests/shift/: test.S
rvtests/simple_add/: test.S
rvtests/simple_lui/: test.S
rvtests/simple_start/: crt.S  test.S
rvtests/simple_start2/: test.S
src/: elf_loader.rs  emu_env.rs  instr_info.rs  lib.rs  main.rs  op_helper.rs  op_helper_fcvt.rs  op_helper_fp_d.rs  op_helper_fp_s.rs  op_helper_mem.rs  riscv.rs  riscv_csr.rs  riscv_decoder.rs  riscv_inst_id.rs  tcg.rs  x86.rs
src/tcg/: mod.rs  tcg.rs
src/tcg/x86/: disassemble.rs  mod.rs  x86.rs
tests/: lib.rs  lib_step.rs
