[package]
name = "dydra"
version = "0.1.0"
authors = ["msyksphinz <msyksphinz.dev@gmail.com>"]
edition = "2018"

[dependencies]
mmap = "*"
libc = "*"
num = "*"
memmap = "*"
softfloat-wrapper = { version = "0.1.3", default-features = false, features = ["riscv"] }
spike-dasm-wrapper = "*"
clap = "3.0.0-beta.1"
iced-x86 = "1.8.0"
bitmaps = "*"
typenum = "*"