[package]
name = "dydra"
version = "0.1.0"
authors = ["msyksphinz <msyksphinz.dev@gmail.com>"]
edition = "2021"

[dependencies]
mmap = "*"
libc = "*"
num = "*"
memmap = "*"
softfloat-wrapper = { version="*", default-features = false, features = ["riscv"]}
spike-dasm-wrapper = "*"
clap = { version = "4", features = ["derive"] }
iced-x86 = "1.8.0"
bitmaps = "*"
typenum = "*"
fnv = "1.0.3"
arr_macro = "0.1.3"
